Fixed the top spacing for the sidebar with media queries

--- a/client/src/components/ContainerComponents/Sidebar/sidebar.css
+++ b/client/src/components/ContainerComponents/Sidebar/sidebar.css
@@ -5,7 +5,7 @@
   width: 30rem;
   background-color: #272727;
   height: 100%;
-  top: 100px;
+  top: 110px;
   padding: 10px;
   z-index: 99;
 }
